[tool.poetry]
name = "s300-dispatcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "^0.115.5"
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
beanie = "1.27.0"
celery = "^5.4.0"
redis = "^5.2.0"
flower = "^2.0.1"
uvicorn = "^0.32.1"
aiosmtplib = "^3.0.2"
jinja2 = "^3.1.4"
httpx = "^0.27.2"
aiofiles = "^24.1.0"
pyjwt = "^2.10.0"
aiohttp = "^3.11.7"
python-multipart = "^0.0.17"
pip = "^24.3.1"
openpyxl = "^3.1.5"
reportlab = "^4.2.5"
jsony-responses = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "jsony_responses"}
qp-translator = {git = "https://github.com/eac0de/u_utils", subdirectory = "qp_translator"}
telegram-sender = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "telegram_sender"}
template-renderer = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "template_renderer"}
file-manager = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "file_manager"}
email-sender = {git = "https://github.com/eac0de/u_utils.git", subdirectory = "email_sender"}
elasticsearch = {extras = ["async"], version = "^8.17.0"}

[tool.poetry.group.dev.dependencies]
aiodocker = "^0.24.0"
asgi-lifespan = "^2.1.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
